Urađeni JUnit testovi za sve domenske klase,sistemske operacije kao i modele tabela kod Client-a